<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="393dp"
        android:layout_height="343dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="clearButtonClick"
                android:text="@string/clear"
                android:textColor="@color/orange"
                android:textColorHighlight="@color/orange"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/backBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:backgroundTint="@color/orange"
                android:onClick="backButtonClick"
                android:text="@string/back"

                android:textColor="@color/orange" />

            <Button
                android:id="@+id/percentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="percentButtonClick"
                android:text="@string/percent"
                android:textColor="@color/orange"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="multiplyButtonClick"
                android:text="@string/multiply"
                android:textColor="@color/orange"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sevenButtonClick"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="eightButtonClick"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="nineButtonClick"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/devideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="divideButtonClick"
                android:text="@string/divide"
                android:textColor="@color/orange"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fourButtonClick"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fiveButtonClick"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sixButtonClick"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="addButtonClick"
                android:text="@string/Add"
                android:textColor="@color/orange"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="oneButtonClick"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="twoButtonClick"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="threeButtonClick"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="subtractButtonClick"
                android:text="@string/subract"
                android:textColor="@color/orange"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusminusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="parButtonClick"
                android:text="@string/par"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="zeroButtonClick"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/decimalBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="dotButtonClick"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/orange"
                android:onClick="equalButtonClick"
                android:shadowColor="@color/orange"
                android:text="@string/result"

                android:textColor="@color/white"
                android:textSize="24sp"
                app:rippleColor="@color/orange" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/enter_in_the_value"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resultDisplay"
        android:layout_width="372dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:gravity="end"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValue" />


</androidx.constraintlayout.widget.ConstraintLayout>